<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnCheckServer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/CheckServer" />
    

    <TableLayout
        android:id="@+id/tableView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
	            <TextView
			        android:id="@+id/TextView01"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/dev"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
	            
	            <TextView
			        android:id="@+id/DeviceID"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
	            <TextView
			        android:id="@+id/TextView02"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/devBuildNumber"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
			        android:id="@+id/DeviceVers"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
	            <TextView
			        android:id="@+id/TextView04"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/serverVers"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
			        android:id="@+id/CurrVers"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
	            <TextView
			        android:id="@+id/TextView03"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/dataChecker"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/DateCheck"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>

</RelativeLayout>